--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ramisa // Web Developer</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 
@@ -32,7 +32,7 @@
     <section class="page-section about-me" id="about">
       <h3>About Me</h3>
       <p>Hi, I am Ramisa. I quit my job as an NHS doctor to code captivating websites. This is my portfolio of recent projects.</p>
-      <img src="../starter/images/ramisa.png" class="me" alt="woman wearing hijab">
+      <img src="./assets/images/ramisa.png" class="me" alt="woman wearing hijab">
     </section>
 
     <hr/>
@@ -42,24 +42,24 @@
       <div class="projects">
 
         <div class="project-2">
-          <a style="display: contents" href="./images/project-2.png">
-            <img src="./images/project-2.png" class="project-2-img" alt="hypertext markup language webpage">
+          <a style="display: contents" href="./assets/images/project-2.png">
+            <img src="./assets/images/project-2.png" class="project-2-img" alt="hypertext markup language webpage">
           </a>
           <h4>Project 2</h4>
           <p>HTML</p>
         </div>
 
         <div class="project-1">
-          <a style="display: contents" href="./images/project-1.png">
-            <img src="./images/project-1.png" class="project-1-img" alt="cascading style sheets webpage">
+          <a style="display: contents" href="./assets/images/project-1.png">
+            <img src="./assets/images/project-1.png" class="project-1-img" alt="cascading style sheets webpage">
           </a>
           <h4>Project 1</h4>
           <p>CSS</p>
         </div>
 
         <div class="project-3">
-          <a style="display: contents" href="./images/project-3.png">
-            <img src="./images/project-3.png" class="project-3-img" alt="javascrip webpage">
+          <a style="display: contents" href="./assets/images/project-3.png">
+            <img src="./assets/images/project-3.png" class="project-3-img" alt="javascript webpage">
           </a>
           <h4>Project 3</h4>
           <p>JavaScript</p>
@@ -79,7 +79,7 @@
   
     <section class="page-section resume" id="resume">
       <h3>Resume</h3>
-      <embed src="resume.pdf" width="800px" height="400px" />
+      <embed src="./resume.pdf" width="800px" height="400px" />
     </section>
   </main>
 
